<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D5D4D4"
    android:orientation="vertical"
    android:padding="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calc_name"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:lines="5"
            android:gravity="right|bottom"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5">
            <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/cancel"
                    />
            <Button
                    android:id="@+id/btn_divide"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/divide"
                    />
            <Button
                    android:id="@+id/btn_multiply"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/multiply"
                    />
            <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/clear"
                    />
            <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/seven"
                    />
            <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/eight"
                    />
            <Button
                    android:id="@+id/btn_night"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/nine"
                    />
            <Button
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/add"
                    />
            <Button
                    android:id="@+id/btn_four"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/four"
                    />
            <Button
                    android:id="@+id/btn_five"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/five"
                    />
            <Button
                    android:id="@+id/btn_six"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/six"
                    />
            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_font_size"
                android:text="@string/subtract"
                />
            <Button
                    android:id="@+id/btn_one"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/one"
                    />
            <Button
                    android:id="@+id/btn_two"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/two"
                    />
            <Button
                    android:id="@+id/btn_three"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/button_font_size"
                    android:text="@string/three"
                    />
            <Button
                android:id="@+id/btn_sqrt"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_font_size"
                android:text="@string/sqrt"
                />
            <Button
                android:id="@+id/btn_fraction"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_font_size"
                android:text="@string/fraction"
                />
            <Button
                android:id="@+id/btn_zero"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_font_size"
                android:text="@string/zero"
                />
            <Button
                android:id="@+id/btn_dot"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_font_size"
                android:text="@string/dot"
                />
            <Button
                android:id="@+id/btn_result"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/button_font_size"
                android:text="@string/result"
                />
        </GridLayout>
    </LinearLayout>
</LinearLayout>